imagenes cargadas, pero no funciona isotope, json

--- a/style.css
+++ b/style.css
@@ -153,17 +153,17 @@ body {
 	background-color: #212529;
 }
 
-
+*/
 
 body{
-	text-align:center;*/
+	/* text-align:center; */
 	/*color que tiene google*/
-	/* background-color: #202124;
+	/* /* background-color: #202124; */
 	color: darkgray;
 
 	background-color: #343838;
 	padding: 20px;
-}  */
+}
 
 
 /*estilos de las tablas*/
