--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ body {
   height: 100px;
   margin: 5px;
   padding: 10px;
-  background: #888;
+  /* background: #888; */
   color: #262524;
 }
 
@@ -126,17 +126,19 @@ body {
   display: none;
 }
 
-.element-item.alkali          { background: #F00; background: hsl(   0, 100%, 50%); }
-.element-item.alkaline-earth  { background: #F80; background: hsl(  36, 100%, 50%); }
-.element-item.lanthanoid      { background: #FF0; background: hsl(  72, 100%, 50%); }
-.element-item.actinoid        { background: #0F0; background: hsl( 108, 100%, 50%); }
-.element-item.transition      { background: #0F8; background: hsl( 144, 100%, 50%); }
-.element-item.post-transition { background: #0FF; background: hsl( 180, 100%, 50%); }
-.element-item.metalloid       { background: #08F; background: hsl( 216, 100%, 50%); }
-.element-item.diatomic        { background: #00F; background: hsl( 252, 100%, 50%); }
-.element-item.halogen         { background: #F0F; background: hsl( 288, 100%, 50%); }
-.element-item.noble-gas       { background: #F08; background: hsl( 324, 100%, 50%); }
-
+/* posicion de las imagenes de frame y background de los items */
+.under {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  z-index: -2;
+}
+.over {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  z-index: -1;
+}
 
 
 
