--- a/style.css
+++ b/style.css
@@ -116,6 +116,13 @@ li{
   display: inline-block;
 }
 
+#bloque2{
+  background-color: #c4d88c;
+  border-radius: 15px;
+  padding: 10px;
+  display: inline-block;
+}
+
 
 /* ---------------- isotope ---------------- */
 /* borde del grid: */
