--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
-* { box-sizing: border-box; }
+* {
+  box-sizing: border-box;
+}
 
 body {
   font-family: 'Lexend Deca';
-  height: 1100px;       /* tamaño fijo */
-	padding: 20px;
+  height: 1100px;
+  /* tamaño fijo */
+  padding: 20px;
   /* color: rgb(255, 255, 255); */
   color: #3e3e3e;
 
@@ -12,13 +15,13 @@ body {
   /* background-color: #49354e; */
   /* background-color: #7e5286; */
   /* background-color: #52b8cb; */
- 
+
   background: radial-gradient(circle, #52b8cb 44%, #b0bbf7 100%);
 }
 
 /* ---------------- button ---------------- */
-li{
-  display:inline-block;
+li {
+  display: inline-block;
 }
 
 .button {
@@ -30,7 +33,7 @@ li{
 
   border: none;
   border-radius: 7px;
-  background-image: linear-gradient( to bottom, hsla(0, 0%, 0%, 0), hsla(0, 0%, 0%, 0.2) );
+  background-image: linear-gradient(to bottom, hsla(0, 0%, 0%, 0), hsla(0, 0%, 0%, 0.2));
   /* color: #222; */
   color: #EEE;
   font-family: 'Varela Round';
@@ -66,7 +69,7 @@ li{
 
 
 /* hacer botones inabilitados */
-.Disabled{
+.Disabled {
   pointer-events: none;
   cursor: not-allowed;
   opacity: 0.65;
@@ -95,33 +98,73 @@ li{
   margin-right: 1px;
 }
 
-.button-group .button:first-child { border-radius: 0.5em 0 0 0.5em; }
-.button-group .button:last-child { border-radius: 0 0.5em 0.5em 0; }
-
-
-/* cajas contenedoras */
-#bloque-filtros{
-  background-color: #c4d88c;
-  border-radius: 15px;
-  padding: 10px;
-  display: inline-block;
-  margin-bottom: 0.25em;
-  /* display: flex; */
+.button-group .button:first-child {
+  border-radius: 0.5em 0 0 0.5em;
 }
 
-#bloque-sorts{
-  background-color: #c4d88c;
-  border-radius: 15px;
-  padding: 10px;
-  display: inline-block;
+.button-group .button:last-child {
+  border-radius: 0 0.5em 0.5em 0;
 }
 
-#bloque2{
+
+/* ========== cajas contenedoras de botones ========== */
+#buttons-container {
+  /* background-color: #d5dac8; */
+  display: grid;
+  grid-template-columns: 3.5fr 2fr 0.8fr;
+  /* 4 columnas de 1fraction y 3 columnas de 1fr */
+  /* grid-auto-rows: minmax(10px, auto); */
+  grid-gap: 0.5em;
+  /* espacio entre filas y columnas */
+  grid-template-areas:
+    /* en base a los nombres posicionar los items */
+    "izq header header"
+    "izq cent restart";
+
+}
+
+#buttons-container>div {
+  /* el > es para los hijos directos de buttons-container */
   background-color: #c4d88c;
   border-radius: 15px;
-  padding: 10px;
-  display: inline-block;
+
+  /* para darle un borde a cada item (y padding) */
+  box-sizing: border-box;
+  width: 100%;
+  border: solid #5B6DCD 7px;
+  padding: 5px;
 }
+
+/* espacio que ocupará cada item */
+#bloque-botones-1 {
+  grid-area: izq;
+}
+
+#bloque-botones-2 {
+  grid-area: header;
+}
+
+#bloque-botones-3 {
+  grid-area: cent;
+}
+
+#bloque-botones-4 {
+  grid-area: restart;
+  /* el boton estará centrado */
+  display: grid;
+  place-items: center;
+}
+
+
+/* justify-self: center;
+  align-self: center; */
+
+
+
+
+
+
+
 
 
 /* ---------------- isotope ---------------- */
@@ -150,7 +193,7 @@ li{
   color: #262524;
 }
 
-.element-item > * {
+.element-item>* {
   margin: 0;
   padding: 0;
 }
@@ -197,6 +240,7 @@ li{
   top: 0px;
   z-index: -2;
 }
+
 .over {
   position: absolute;
   left: 0px;
@@ -214,23 +258,23 @@ li{
 .tooltip-inner {
   text-align: left;
   max-width: none;
-}   
+}
 
 
 /* ---------------- titulo ---------------- */
 #titulo {
   /* texto centrado y que ocupe todo el ancho */
   text-align: center;
-  width:100%;
+  width: 100%;
   margin-bottom: 1em;
 }
 
-#titulo > span {
+#titulo>span {
   /* personalizar el interior del titulo  */
   height: 50px;
   padding: 15px;
   border-radius: 20px;
-  width:100px; 
+  width: 100px;
   /* background: #7b6cce; */
   background: #ffd472;
   font-weight: bold;
